stp/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stpbabushka-prod

---

apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
